tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_bool_generic_as_loop_bound/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: N has a type of bool. The only supported numeric generic types are `u1`, `u8`, `u16`, and `u32`.
  ┌─ src/main.nr:2:24
  │
2 │     pub fn read<let N: bool>() {
  │                        ---- Unsupported numeric generic type
  │

error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:3:30
  │
3 │         let mut fields = [0; N];
  │                              - expected `u32`, found `bool`
  │

error: Expected type Field, found type bool
  ┌─ src/main.nr:4:21
  │
4 │         for i in 0..N { 
  │                     -
  │

Aborting due to 3 previous errors
